[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Calendar.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/btn_32x32_04.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/btn_32x32_03.png" type="Texture" id=3]
[ext_resource path="res://src/calendar_days.tres" type="ButtonGroup" id=4]
[ext_resource path="res://assets/textures/right.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/left.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/fastBackwards.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/fastForward.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.819608, 0.8, 0.8, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.376471, 0.376471, 0.376471, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 16.0
expand_margin_right = 16.0
expand_margin_top = 16.0
expand_margin_bottom = 16.0
shadow_color = Color( 0, 0, 0, 0.235294 )
shadow_size = 16

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.352941 )
shadow_size = 6

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Calendar" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 1 )

[node name="popup" type="PopupPanel" parent="."]
visible = true
margin_left = 43.0
margin_top = 43.0
margin_right = 354.0
margin_bottom = 341.0
rect_min_size = Vector2( 350, 325 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="form" type="VBoxContainer" parent="popup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 350.0
margin_bottom = 321.0

[node name="bg" type="PanelContainer" parent="popup/form"]
self_modulate = Color( 0.54902, 0.54902, 0.54902, 0.431373 )
margin_right = 346.0
margin_bottom = 16.0
custom_styles/panel = SubResource( 3 )

[node name="header" type="HBoxContainer" parent="popup/form/bg"]
margin_left = 1.0
margin_top = 1.0
margin_right = 345.0
margin_bottom = 15.0

[node name="prev_year" type="TextureButton" parent="popup/form/bg/header"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 32.0
margin_bottom = 14.0
rect_min_size = Vector2( 32, 0 )
texture_normal = ExtResource( 7 )
expand = true

[node name="prev_month" type="TextureButton" parent="popup/form/bg/header"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 36.0
margin_right = 68.0
margin_bottom = 14.0
rect_min_size = Vector2( 32, 0 )
texture_normal = ExtResource( 6 )
expand = true

[node name="labels" type="HBoxContainer" parent="popup/form/bg/header"]
margin_left = 72.0
margin_right = 272.0
margin_bottom = 14.0
rect_min_size = Vector2( 200, 0 )
alignment = 1

[node name="month" type="Label" parent="popup/form/bg/header/labels"]
margin_left = 59.0
margin_right = 104.0
margin_bottom = 14.0
text = "January"
align = 2
valign = 1
max_lines_visible = 1

[node name="year" type="Label" parent="popup/form/bg/header/labels"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 5
custom_styles/normal = SubResource( 2 )
text = "2022"
valign = 1
max_lines_visible = 1

[node name="next_month" type="TextureButton" parent="popup/form/bg/header"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 276.0
margin_right = 308.0
margin_bottom = 14.0
rect_min_size = Vector2( 32, 0 )
texture_normal = ExtResource( 5 )
expand = true

[node name="next_year" type="TextureButton" parent="popup/form/bg/header"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 312.0
margin_right = 344.0
margin_bottom = 14.0
rect_min_size = Vector2( 32, 0 )
texture_normal = ExtResource( 8 )
expand = true

[node name="spacer" type="Control" parent="popup/form"]
margin_top = 20.0
margin_right = 346.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 15 )

[node name="days" type="GridContainer" parent="popup/form"]
margin_top = 39.0
margin_right = 346.0
margin_bottom = 197.0
size_flags_horizontal = 3
columns = 7

[node name="sunday" type="Label" parent="popup/form/days"]
margin_right = 46.0
margin_bottom = 14.0
text = "Sun"
align = 1

[node name="monday" type="Label" parent="popup/form/days"]
margin_left = 50.0
margin_right = 96.0
margin_bottom = 14.0
text = "Mon"
align = 1

[node name="tuesday" type="Label" parent="popup/form/days"]
margin_left = 100.0
margin_right = 146.0
margin_bottom = 14.0
text = "Tue"
align = 1

[node name="wednesday" type="Label" parent="popup/form/days"]
margin_left = 150.0
margin_right = 196.0
margin_bottom = 14.0
text = "Wed"
align = 1

[node name="thursday" type="Label" parent="popup/form/days"]
margin_left = 200.0
margin_right = 246.0
margin_bottom = 14.0
text = "Thu"
align = 1

[node name="friday" type="Label" parent="popup/form/days"]
margin_left = 250.0
margin_right = 296.0
margin_bottom = 14.0
text = "Fri"
align = 1

[node name="saturday" type="Label" parent="popup/form/days"]
margin_left = 300.0
margin_right = 346.0
margin_bottom = 14.0
text = "Sat"
align = 1

[node name="0" type="Button" parent="popup/form/days"]
margin_top = 18.0
margin_right = 46.0
margin_bottom = 38.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="1" type="Button" parent="popup/form/days"]
margin_left = 50.0
margin_top = 18.0
margin_right = 96.0
margin_bottom = 38.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="2" type="Button" parent="popup/form/days"]
margin_left = 100.0
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="3" type="Button" parent="popup/form/days"]
margin_left = 150.0
margin_top = 18.0
margin_right = 196.0
margin_bottom = 38.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="4" type="Button" parent="popup/form/days"]
margin_left = 200.0
margin_top = 18.0
margin_right = 246.0
margin_bottom = 38.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="5" type="Button" parent="popup/form/days"]
margin_left = 250.0
margin_top = 18.0
margin_right = 296.0
margin_bottom = 38.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="6" type="Button" parent="popup/form/days"]
margin_left = 300.0
margin_top = 18.0
margin_right = 346.0
margin_bottom = 38.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="7" type="Button" parent="popup/form/days"]
margin_top = 42.0
margin_right = 46.0
margin_bottom = 62.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="8" type="Button" parent="popup/form/days"]
margin_left = 50.0
margin_top = 42.0
margin_right = 96.0
margin_bottom = 62.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="9" type="Button" parent="popup/form/days"]
margin_left = 100.0
margin_top = 42.0
margin_right = 146.0
margin_bottom = 62.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="10" type="Button" parent="popup/form/days"]
margin_left = 150.0
margin_top = 42.0
margin_right = 196.0
margin_bottom = 62.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="11" type="Button" parent="popup/form/days"]
margin_left = 200.0
margin_top = 42.0
margin_right = 246.0
margin_bottom = 62.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="12" type="Button" parent="popup/form/days"]
margin_left = 250.0
margin_top = 42.0
margin_right = 296.0
margin_bottom = 62.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="13" type="Button" parent="popup/form/days"]
margin_left = 300.0
margin_top = 42.0
margin_right = 346.0
margin_bottom = 62.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="14" type="Button" parent="popup/form/days"]
margin_top = 66.0
margin_right = 46.0
margin_bottom = 86.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="15" type="Button" parent="popup/form/days"]
margin_left = 50.0
margin_top = 66.0
margin_right = 96.0
margin_bottom = 86.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="16" type="Button" parent="popup/form/days"]
margin_left = 100.0
margin_top = 66.0
margin_right = 146.0
margin_bottom = 86.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="17" type="Button" parent="popup/form/days"]
margin_left = 150.0
margin_top = 66.0
margin_right = 196.0
margin_bottom = 86.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="18" type="Button" parent="popup/form/days"]
margin_left = 200.0
margin_top = 66.0
margin_right = 246.0
margin_bottom = 86.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="19" type="Button" parent="popup/form/days"]
margin_left = 250.0
margin_top = 66.0
margin_right = 296.0
margin_bottom = 86.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="20" type="Button" parent="popup/form/days"]
margin_left = 300.0
margin_top = 66.0
margin_right = 346.0
margin_bottom = 86.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="21" type="Button" parent="popup/form/days"]
margin_top = 90.0
margin_right = 46.0
margin_bottom = 110.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="22" type="Button" parent="popup/form/days"]
margin_left = 50.0
margin_top = 90.0
margin_right = 96.0
margin_bottom = 110.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="23" type="Button" parent="popup/form/days"]
margin_left = 100.0
margin_top = 90.0
margin_right = 146.0
margin_bottom = 110.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="24" type="Button" parent="popup/form/days"]
margin_left = 150.0
margin_top = 90.0
margin_right = 196.0
margin_bottom = 110.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="25" type="Button" parent="popup/form/days"]
margin_left = 200.0
margin_top = 90.0
margin_right = 246.0
margin_bottom = 110.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="26" type="Button" parent="popup/form/days"]
margin_left = 250.0
margin_top = 90.0
margin_right = 296.0
margin_bottom = 110.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="27" type="Button" parent="popup/form/days"]
margin_left = 300.0
margin_top = 90.0
margin_right = 346.0
margin_bottom = 110.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="28" type="Button" parent="popup/form/days"]
margin_top = 114.0
margin_right = 46.0
margin_bottom = 134.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="29" type="Button" parent="popup/form/days"]
margin_left = 50.0
margin_top = 114.0
margin_right = 96.0
margin_bottom = 134.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="30" type="Button" parent="popup/form/days"]
margin_left = 100.0
margin_top = 114.0
margin_right = 146.0
margin_bottom = 134.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="31" type="Button" parent="popup/form/days"]
margin_left = 150.0
margin_top = 114.0
margin_right = 196.0
margin_bottom = 134.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="32" type="Button" parent="popup/form/days"]
margin_left = 200.0
margin_top = 114.0
margin_right = 246.0
margin_bottom = 134.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="33" type="Button" parent="popup/form/days"]
margin_left = 250.0
margin_top = 114.0
margin_right = 296.0
margin_bottom = 134.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="34" type="Button" parent="popup/form/days"]
margin_left = 300.0
margin_top = 114.0
margin_right = 346.0
margin_bottom = 134.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="35" type="Button" parent="popup/form/days"]
margin_top = 138.0
margin_right = 46.0
margin_bottom = 158.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="36" type="Button" parent="popup/form/days"]
margin_left = 50.0
margin_top = 138.0
margin_right = 96.0
margin_bottom = 158.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="37" type="Button" parent="popup/form/days"]
margin_left = 100.0
margin_top = 138.0
margin_right = 146.0
margin_bottom = 158.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="38" type="Button" parent="popup/form/days"]
margin_left = 150.0
margin_top = 138.0
margin_right = 196.0
margin_bottom = 158.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="39" type="Button" parent="popup/form/days"]
margin_left = 200.0
margin_top = 138.0
margin_right = 246.0
margin_bottom = 158.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="40" type="Button" parent="popup/form/days"]
margin_left = 250.0
margin_top = 138.0
margin_right = 296.0
margin_bottom = 158.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="41" type="Button" parent="popup/form/days"]
margin_left = 300.0
margin_top = 138.0
margin_right = 346.0
margin_bottom = 158.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]
